# lumensure

./: .gitignore  README.md  TESTNET_DEPLOYMENT.md  package-lock.json  package.json
artifacts/: local-evidence.json
circuits/claim/: Nargo.toml  Prover.toml
circuits/claim/src/: main.nr
contracts/: Cargo.toml
contracts/insurance/: Cargo.toml
contracts/insurance/src/: lib.rs  test.rs
contracts/insurance/test_snapshots/test/: test_claim_success_payout.1.json  test_claim_without_event.1.json  test_claim_without_oracle_key_rejected.1.json  test_create_buy_fund.1.json  test_double_claim_rejected.1.json  test_expired_policy_rejected.1.json  test_mutated_public_inputs_rejected.1.json  test_rotated_oracle_key_rejects_old_proof.1.json  test_wrong_event_commitment_rejected.1.json  test_wrong_oracle_rejected.1.json  test_wrong_policy_id_rejected.1.json  test_wrong_verifier_domain_rejected.1.json
docs/: demo-script.md
evidence/: README.md  auditor-receipt.json  get-versions.sh  local-latest.json  mutation-results.json  mutation-results.txt  public-input-manifest.json  testnet-latest.json  testnet-links.md  tool-versions.txt  verifier-artifacts.json
oracle/: sign.mjs  sign.test.mjs
scripts/: claim_fixture.mjs  claim_fixture.test.mjs  deploy.sh  gen_key.sh  inspect-evidence.mjs  rotate_oracle_key.sh  testnet_deploy_flow.sh
submission-bundle/: README.md
tests/mutation/: public-inputs.test.ts  replay-stale.test.ts
web/: build.mjs
